--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-click==6.7
-Flask==0.12.2
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
+Click==7.0
+colorzero==1.1
+dnspython==1.16.0
+enum-compat==0.0.2
+eventlet==0.25.0
+Flask==1.0.3
+Flask-BasicAuth==0.2.0
+Flask-Login==0.4.1
+Flask-SocketIO==4.1.0
+greenlet==0.4.15
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+monotonic==1.5
+picamera==1.13
+pkg-resources==0.0.0
+PyAudio==0.2.11
+python-engineio==3.8.2
+python-socketio==4.2.0
+RPi.GPIO==0.6.5
+six==1.12.0
+Werkzeug==0.15.4
